[gd_scene load_steps=11 format=3 uid="uid://dg6vkcdyk14bv"]

[ext_resource type="Script" uid="uid://dc7fqo3egkh8v" path="res://Scripts/door.gd" id="1_fahql"]
[ext_resource type="Texture2D" uid="uid://b2ujjkfyox7wo" path="res://Sprites/Misc/door.png" id="1_p0e35"]
[ext_resource type="Texture2D" uid="uid://b4nw0ocajyeo7" path="res://Sprites/Misc/doorhandle.png" id="2_fahql"]
[ext_resource type="AudioStream" uid="uid://ddo7w7pmnrkqp" path="res://Sounds/door_open.mp3" id="4_ab4ky"]
[ext_resource type="AudioStream" uid="uid://6mgvmj70y5gd" path="res://Sounds/door_close.mp3" id="5_a43ba"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0e35"]
size = Vector2(29, 160)

[sub_resource type="Animation" id="Animation_ab4ky"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PivotPoint:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PivotPoint/DoorObject/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_a43ba"]
resource_name = "door_close"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PivotPoint:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.4835298, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PivotPoint/DoorObject/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.03333333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DoorClosePlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_fahql"]
resource_name = "door_open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PivotPoint:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.4835298]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PivotPoint/DoorObject/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.03333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a43ba"]
_data = {
&"RESET": SubResource("Animation_ab4ky"),
&"door_close": SubResource("Animation_a43ba"),
&"door_open": SubResource("Animation_fahql")
}

[node name="Door" type="Node2D"]
script = ExtResource("1_fahql")

[node name="PivotPoint" type="Marker2D" parent="."]

[node name="DoorObject" type="StaticBody2D" parent="PivotPoint" groups=["Door"]]

[node name="DoorSprite" type="Sprite2D" parent="PivotPoint/DoorObject"]
position = Vector2(3, 74)
texture = ExtResource("1_p0e35")

[node name="DoorHandle" type="Sprite2D" parent="PivotPoint/DoorObject/DoorSprite"]
position = Vector2(5.000004, 44.999996)
rotation = -1.5707964
scale = Vector2(0.1075, 0.1425)
texture = ExtResource("2_fahql")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PivotPoint/DoorObject"]
position = Vector2(5.5, 74)
shape = SubResource("RectangleShape2D_p0e35")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a43ba")
}

[node name="DoorTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ab4ky")

[node name="DoorClosePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_a43ba")

[connection signal="timeout" from="DoorTimer" to="." method="_on_door_timer_timeout"]
